fixed alignment on projet item

--- a/public/style.css
+++ b/public/style.css
@@ -696,7 +696,7 @@ button:focus {
 	right: 16px;
 	bottom: 16px;
 	color: #fff;
-	padding-top: 25%;
+	padding-top: 20%;
 	text-align: center;
 	-webkit-transition: all 0.5s;
 	transition: all 0.5s;
